--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "prod_start": "NODE_ENV=production& nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,10 +13,17 @@
     "bcrypt": "^5.1.0",
     "connect-mongo": "^3.2.0",
     "crypto": "^1.0.1",
+    "del": "^4.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-rev": "^9.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-uglify-es": "^1.0.4",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-sass-middleware": "^1.0.1",
     "nodemailer": "^6.9.1",
@@ -23,6 +31,10 @@
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
+    "rotating-file-stream": "^3.1.0",
     "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
