--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-rev": "^9.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-uglify-es": "^1.0.4",
+    "mongoose": "^6.9.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-sass-middleware": "^1.0.1",
