--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run index.js",
+    "start": "nodemon index.js",
     "prod_start": "NODE_ENV=production& nodemon index.js"
   },
   "author": "",
